# Battlecode2023

./: .gitignore  copy_bot.py  gradle.properties  run_matches.py
.github/workflows/: main.yml  run-unit-tests.yaml
maps/: AdamantiumOnly.map23  generated_captain_america.map23  generated_chalice.map23  generated_charge.map23  generated_chessboard.map23  generated_cobra.map23  generated_collaboration.map23  generated_colosseum.map23  generated_deer.map23  generated_defenseless.map23  generated_definitely_not_league.map23  generated_desert.map23  generated_despair.map23  generated_diamond.map23  generated_dodgeball.map23  generated_eckleburg.map23  generated_equals.map23  generated_fire.map23  generated_fisherman.map23
rust/bc23-fastsort/: .gitignore  Cargo.toml
rust/bc23-mapconvert/: .gitignore  Cargo.toml  build.rs
rust/microtrainer/: .gitignore  Cargo.toml
rust/microtrainer/src/: arena.rs  bot.rs  bot_ext.rs  direction.rs  game.rs  grid.rs  imports.rs  lib.rs  main.rs  micro.rs  plot.rs  position.rs  robot.rs  simulated_annealing.rs  tests.rs  visualizer.rs
rust/microtrainer/src/micro/: globalelite.rs  mod.rs  random.rs  scored.rs  scored2.rs  sprint1.rs  sprint2.rs
src/beforeAdjustments/: RobotPlayer.java
src/beforeAdjustments2/: RobotPlayer.java
src/beforeAvoidCloud/: RobotPlayer.java
src/beforeBetterEnemyHqPredictions/: RobotPlayer.java
src/beforeBetterMicro/: RobotPlayer.java
src/beforeBlacklist/: RobotPlayer.java
src/beforeBuildLocations/: RobotPlayer.java
src/beforeBuildOrder/: RobotPlayer.java
src/beforeCarrierAttack/: RobotPlayer.java
(+938 files in other folders)
