[package]
name = "microtrainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = { version = "3.7" }
statistical = "1.0.0"
rand = "0.8.5"
anyhow = "1.0"
lazy_static = "1.4.0"
itertools = "0.10.5"
rayon = "1.5"
ld4-expect = { git = "https://github.com/awesomelemonade/ld4-expect" }

[profile.dev]
opt-level = 3